--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
-    "openai": "^5.12.2"
+    "openai": "^5.12.2",
+    "pdf-parse": "^1.1.1"
   }
 }
